# VTK

./: README.md
CellData-To-PointData/: CMakeLists.txt  main.cpp
CellData-To-PointData/inputs/: tissue_activation_time_map_pulse_it_0.vtu
CellData-To-PointData/outputs/: pointdata.vtk  pointdata_coordinates.pts  pointdata_scalars.txt
CollisionDetection/: CMakeLists.txt  CollisionDetection.cxx
CollisionDetection/inputs/: points-set-1.txt  points-set-10.txt  points-set-11.txt  points-set-12.txt  points-set-13.txt  points-set-14.txt  points-set-15.txt  points-set-16.txt  points-set-2.txt  points-set-3.txt  points-set-4.txt  points-set-5.txt  points-set-6.txt  points-set-7.txt  points-set-8.txt
CollisionDetection/outputs/: intersection.vtk  line_1.vtp  line_2.vtp
Cylinder/: CMakeLists.txt  Cylinder.cxx
DisplayQuadraticSurfaces/: CMakeLists.txt  Paraboloid.cxx  Quadratic.cxx  paraboloid.vtk
DisplayQuadraticSurfaces/outputs/: quadratic.vtk
DumpXMLFile/: CMakeLists.txt
GeodesicPath/: .gitignore  CMakeLists.txt  main.cpp
GeodesicPath/inputs/: cadim_full_mesh_cardiax.stl
GeodesicPath/outputs/: pathway.vtu
GeodesicPath_OpenMP/: .gitignore  CMakeLists.txt  main.cpp
GeodesicPath_OpenMP/outputs/: pathway_0.vtu  pathway_1.vtu  pathway_10.vtu  pathway_100.vtu  pathway_101.vtu  pathway_102.vtu  pathway_103.vtu  pathway_104.vtu  pathway_105.vtu  pathway_106.vtu  pathway_107.vtu  pathway_108.vtu  pathway_109.vtu  pathway_11.vtu  pathway_110.vtu  pathway_111.vtu  pathway_112.vtu  pathway_113.vtu  pathway_114.vtu  pathway_115.vtu  pathway_116.vtu  pathway_117.vtu  pathway_118.vtu  pathway_119.vtu  pathway_12.vtu  pathway_120.vtu  pathway_121.vtu  pathway_122.vtu  pathway_123.vtu  pathway_124.vtu  pathway_125.vtu  pathway_126.vtu  pathway_127.vtu  pathway_128.vtu  pathway_129.vtu  pathway_13.vtu  pathway_130.vtu  pathway_131.vtu  pathway_132.vtu  pathway_133.vtu  (+960 more)
GradientFilter/: .gitignore  CMakeLists.txt  main.cpp
GraphProcessing/: CMakeLists.txt  GraphProcessing.cxx  graph.vtp  processFolder.sh
GraphProcessing/Output-Files/: TreeNterm100_S1_reduzido.vtp  TreeNterm250_S1_reduzido.vtp  TreeNterm50_S1_reduzido.vtp  biff.vtp  report.vtp  report2.vtp
GraphToVTP/: CMakeLists.txt  GraphToVTP.cxx  GraphToVTP.h
Hexaedron-Numeration/: CMakeLists.txt  main.cpp
PointToSphere/: CMakeLists.txt  GraphProcessing.cxx  PointToSphere.cxx  genFiles.cxx
PolylineDecimate/: CMakeLists.txt  main.cpp
Python-Scripts/: vtk2xml.py
Sphere/: CMakeLists.txt  Sphere.cxx
TwoPointsToCylinder/: CMakeLists.txt  OrientedCylinder.cxx
UnstructuredGridBuilder/: CMakeLists.txt
UnstructuredGridBuilder/inputs/: points-1.txt
UnstructuredGridBuilder/src/: main.cpp
UnstructuredGridBuilder/src/utils/: utils.cpp  utils.h
UnstructuredGridClipWithBounds/: CMakeLists.txt
UnstructuredGridClipWithBounds/inputs/: output.vtu
UnstructuredGridClipWithBounds/outputs/: output.vtu
UnstructuredGridClipWithBounds/src/: main.cpp
UnstructuredGridClipWithBounds/src/tissue/: CMakeLists.txt  control_volume.cpp  control_volume.h
UnstructuredGridClipWithBounds/src/utils/: utils.cpp
VTKToVTP/: CMakeLists.txt  Converter.cxx  convertFolder.sh  graph.vtk  graph.vtp
VTP-Utils/: CMakeLists.txt  main.cpp
VTU-Utils/: CMakeLists.txt  main.cpp
WriteVTP/: CMakeLists.txt  WriteVTP.cxx
(+401 files in other folders)
